# newscc

./: .gitignore  README.md  clean.sh  pyproject.toml  template.yaml
richcrawl/: __main__.py  pyproject.toml
richcrawl/newsfetch_common_crawl/: get_latest_warc.py  warc_extracted_files_processor.py  warc_extractor.py
richcrawl/newsfetch_core/common/: util.py
richcrawl/newsfetch_enrichers/: config.py  run_enrichers.py
richcrawl/newsfetch_enrichers/common/: datatypes.py  util.py
richcrawl/newsfetch_enrichers/newsfetch_enrichers/: enricher_model_factory.py  keyword_extraction_enricher.py  spacy_ner_enricher.py  topic_modeling_enricher.py  transformers_enricher.py  transformers_ner_enricher.py  transformers_summarization_enricher.py  transformers_zeroshot_classification_enricher.py
richcrawl/newsfetch_newsplease/: newplease_adapter.py
richcrawl/richcrawl/: __main__.py
richcrawl/richcrawl/newsfetch_common_crawl/: get_latest_warc.py  warc_extracted_files_processor.py  warc_extractor.py
richcrawl/richcrawl/newsfetch_enrichers/: config.py  run_enrichers.py
richcrawl/richcrawl/newsfetch_enrichers/newsfetch_enrichers/: allenai_enricher.py  enricher.py  enricher_model_factory.py  entity_composer.py  named_entities_aggregator.py  spacy_enricher.py  spacy_ner_enricher.py  transformers_sentiment_classification_enricher.py  transformers_zeroshot_classification_enricher.py
