[tool.poetry]
name = "richcrawl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
warcio = "^1.7.4"
news-please = "^1.5.35"
awscli = "^1.29.50"
requests = "^2.31.0"
keybert = "^0.7.0"
torch="^1.10.1"
transformers="^4.21.1"
spacy = "^3.6.1"
en-core-web-md = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.6.0/en_core_web_md-3.6.0.tar.gz#egg=en_core_web_md"}
llvmlite = "^0.40.1"
bertopic = "^0.15.0"
pyarrow = "^13.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
